fix product illustration overflow

--- a/stencil-components/src/components/c4-product-illustration/c4-product-illustration.css
+++ b/stencil-components/src/components/c4-product-illustration/c4-product-illustration.css
@@ -7,7 +7,7 @@ div {
   background: #fff;
   position: relative;
   height: 30em;
-  width: 30em;
+  max-width: 100%;
 }
 
 div::before,
